testsuite/tests/properties/invalid_eq/common.lkt
from lexer_example import foo_lexer
from test import Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Lit(@Number))
}

class FooNode implements Node[FooNode] {
}

class Lit: FooNode implements TokenNode {
}
